--- a/CoreTest/Views/_ViewImports.cshtml
+++ b/CoreTest/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using CoreTest
 @using CoreTest.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Kendo.Mvc
+@using Kendo.Mvc.UI
